Ticket #3461: gap in sqrt is fixed in most cases (MathQuill)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@26844 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/mathquill.css
+++ b/web/src/geogebra/resources/css/mathquill.css
@@ -280,6 +280,9 @@
   -o-transform-origin: top;
   transform-origin: top;
 }
+.mathquill-rendered-math .font .sqrt-prefix {
+  top: 0.5px;
+}
 .mathquill-rendered-math .sqrt-stem {
   border-top: 1px solid;
   margin-top: 1px;
